Integrated DTLTO (no backend) implementation

--- a/llvm/lib/CMakeLists.txt
+++ b/llvm/lib/CMakeLists.txt
@@ -50,6 +50,8 @@ endif()
 add_subdirectory(WindowsDriver)
 add_subdirectory(WindowsManifest)
 
+add_subdirectory(DTLTO)
+
 set(LLVMCONFIGLIBRARYDEPENDENCIESINC "${LLVM_BINARY_DIR}/tools/llvm-config/LibraryDependencies.inc")
 
 # Special components which don't have any source attached but aggregate other
